--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
   "minimum-stability": "dev",
   "require": {
     "php": ">=5.3.2",
-    "symfony/framework-bundle": ">=2.1,~2.4@dev",
+    "symfony/framework-bundle": "3.1.*",
     "twig/twig": "@stable",
     "doctrine/orm": "@stable",
     "doctrine/common": "@stable",
